examples/test/testpolicy17308.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17308
  namespace: namespace316
spec:
  podSelector:
    matchLabels:
      key9: value20
      key8: value11
      key35: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value11
          key34: value18
      podSelector:
        matchLabels:
          key25: value19
